--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,35 @@ img {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
 }
-.banner_text h2 {
+/* .banner_text h2 {
   font-size: 36px;
   font-weight: 600;
   font-family: "Open Sans", sans-serif;
   padding-top: 30px;
+} */
+#app {
+  /* text-align: center; */
+  font-size: 50px;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-clip: border-box;
+  text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
 /* =======================
       Banner Part End
