--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,9 @@ img {
 } */
 #app {
   /* text-align: center; */
-  font-size: 50px;
+  margin-top: 20px;
+  font-size: 36px;
+  font-weight: 500;
   background-image: linear-gradient(
     -225deg,
     #231557 0%,
@@ -111,6 +113,22 @@ img {
   to {
     background-position: 200% center;
   }
+}
+.banner_text a {
+  font-size: 18px;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  margin-top: 50px;
+  padding: 14px 20px;
+  color: #fff;
+  background: coral;
+  border-radius: 15px;
+  border: 1px solid coral;
+  transition: all linear 0.3s;
+}
+.banner_text a:hover {
+  background: transparent;
+  color: #000;
 }
 /* =======================
       Banner Part End
