--- a/css/style.css
+++ b/css/style.css
@@ -146,10 +146,36 @@ img {
 #about {
   padding-top: 80px;
 }
-.border {
+
+/* ---- reset ---- */
+
+body {
+  margin: 0;
+  font: normal 75% Arial, Helvetica, sans-serif;
+}
+
+canvas {
+  display: block;
+  vertical-align: bottom;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 120px;
+  background-color: #000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+/* .border {
   padding: 50px 0;
   background: #000;
-}
+} */
 .about_details {
   display: flex;
   gap: 100px;
@@ -172,7 +198,7 @@ img {
 }
 .about_text p {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
   color: #767676;
   letter-spacing: 1px;
   font-family: "Open Sans", sans-serif;
@@ -192,7 +218,7 @@ img {
   font-family: "Popins", sans-serif;
 }
 .about_text .web ul li a {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: #000;
   transition: all linear 0.3s;
 }
@@ -225,10 +251,57 @@ img {
 ========================== */
 
 /* =======================
-      Menu Part Start
+      Portfolio Part Start
 ========================== */
+#portfolio {
+  padding: 100px 0;
+}
+/* .port_details {
+  display: flex;
+  justify-content: space-between;
+} */
+.port_text {
+  text-align: center;
+}
+.port_details .port_text h2 {
+  font-size: 30px;
+  font-weight: 600;
+  color: #000;
+  width: 100%;
+  font-family: "Popins", sans-serif;
+}
+.port_details .port_text p {
+  font-size: 18px;
+  font-weight: 400;
+  color: #767676;
+  width: 100%;
+  font-family: "Open Sans", sans-serif;
+  padding-top: 32px;
+  width: 660px;
+  margin: 0 auto;
+}
+.skills_details {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 46px;
+}
+.port_skill {
+  width: 45%;
+}
+.skills_items {
+  padding-bottom: 30px;
+}
+.skills p {
+  font-size: 18px;
+  font-weight: 600;
+  font-family: "Open Sans", sans-serif;
+  padding-bottom: 16px;
+}
+.progress .progress-bar {
+  background: #e54b4b;
+}
 /* =======================
-      Menu Part End
+      Portfolio Part End
 ========================== */
 
 /* =======================
