--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,10 @@ img {
   font-weight: 700;
   background-image: linear-gradient(
     -225deg,
-    #fa8282 0%,
-    #fabbbb 29%,
-    #df7598 67%,
-    #ce3a08 100%
+    rgb(76, 186, 208) 0%,
+    #e54b4b 29%,
+    #ff1361 67%,
+    #fff800 100%
   );
   background-clip: border-box;
   text-fill-color: transparent;
@@ -145,31 +145,7 @@ img {
 ========================== */
 #about {
   padding-top: 80px;
-}
-
-/* ---- reset ---- */
-
-body {
-  margin: 0;
-  font: normal 75% Arial, Helvetica, sans-serif;
-}
-
-canvas {
-  display: block;
-  vertical-align: bottom;
-}
-
-/* ---- particles.js container ---- */
-
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 120px;
-  background-color: #000;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
+  background: #f9f9f9;
 }
 
 /* .border {
@@ -229,10 +205,10 @@ canvas {
   margin-right: 10px;
 }
 .resume {
-  padding-top: 36px;
+  padding-top: 26px;
 }
 .resume a {
-  padding: 18px 36px;
+  padding: 16px 34px;
   background: #e54b4b;
   border: 1px solid #e54b4b;
   border-radius: 15px;
@@ -304,6 +280,73 @@ canvas {
       Portfolio Part End
 ========================== */
 
+/* =======================
+    Freelance Part Start
+========================== */
+#freelance {
+  background: url(/images/freelance.png);
+  padding: 80px 0;
+}
+.free_details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#free {
+  font-size: 36px;
+  font-weight: 700;
+  font-family: "Popins", sans-serif;
+  background-image: linear-gradient(
+    -225deg,
+    #fff 0%,
+    #fff 29%,
+    #fff 67%,
+    #fff 100%
+  );
+  background-clip: border-box;
+  text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+.free_details a {
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  font-family: "Popins", sans-serif;
+  border-bottom: 2px solid #767676b7;
+  transition: all linear 0.3s;
+  padding-bottom: 5px;
+}
+.free_details a:hover {
+  color: #e54b4b;
+  border-bottom: 2px solid #fff;
+}
+
+/* =======================
+    Freelance Part End
+========================== */
+/* =======================
+      Menu Part Start
+========================== */
+/* =======================
+      Menu Part End
+========================== */
+/* =======================
+      Menu Part Start
+========================== */
+/* =======================
+      Menu Part End
+========================== */
 /* =======================
       Menu Part Start
 ========================== */
