--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,10 +5,440 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199.98px) {
+  /* =====================
+      Contact Part Start
+========================== */
+  #contact {
+    padding: 80px 0;
+  }
+  .cont_text ul li {
+    padding-bottom: 20px;
+    font-size: 15px;
+  }
+  .cont_text ul li span,
+  a {
+    padding-left: 12px;
+  }
+  /* =====================
+      Contact Part End
+========================== */
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
+  /* =======================
+      Menu Part Start
+========================== */
+  .main_menu a {
+    font-size: 36px;
+  }
+  .main_menu .menu ul {
+    gap: 10px;
+    text-align: center;
+    padding-top: 10px;
+  }
+  .main_menu .navbar-toggler {
+    border: 0;
+    color: #fff;
+  }
+
+  .main_menu .navbar-toggler:focus {
+    box-shadow: none;
+  }
+
+  .main_menu .navbar-toggler {
+    border: 0;
+  }
+  /* =======================
+      Menu Part Start
+========================== */
+
+  /* =======================
+      Banner Part Start
+========================== */
+  #banner {
+    padding: 80px 0;
+  }
+  .banner_text {
+    padding: 50px 0;
+  }
+  .banner_text h1 {
+    font-size: 36px;
+  }
+  #app {
+    margin-top: 16px;
+    font-size: 28px;
+  }
+  /* =======================
+    Banner Part End
+========================== */
+  /* =======================
+      About Part Start
+========================== */
+  #about {
+    padding-top: 80px;
+  }
+  .about_details {
+    gap: 60px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .about_details img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+  }
+  .about_text {
+    text-align: center;
+  }
+  .about_text h3 {
+    font-size: 30px;
+  }
+  .about_text p {
+    font-size: 18px;
+    padding: 28px 0;
+    line-height: 26px;
+  }
+  .about_text .web {
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .about_text .web ul {
+    font-size: 18px;
+  }
+  .resume {
+    padding-top: 16px;
+  }
+  .resume a {
+    padding: 10px 20px;
+    font-size: 18px;
+  }
+  /* =======================
+  About Part End
+========================== */
+  /* =======================
+      Portfolio Part Start
+========================== */
+  #portfolio {
+    padding: 80px 0;
+  }
+  .port_details .port_text h2 {
+    font-size: 30px;
+  }
+  .port_details .port_text p {
+    font-size: 18px;
+    padding-top: 28px;
+    width: 100%;
+  }
+  .skills p {
+    font-size: 18px;
+    padding-bottom: 16px;
+  }
+  /* =======================
+  Portfolio Part End
+========================== */
+  /* =======================
+    Freelance Part Start
+========================== */
+  #freelance {
+    padding: 80px 0;
+  }
+  #free {
+    font-size: 20px;
+  }
+  .free_details a {
+    font-size: 18px;
+  }
+  /* =======================
+Freelance Part End
+========================== */
+  /* =======================
+      Contact Part Start
+========================== */
+  #contact {
+    padding: 80px 0;
+  }
+  .cont_details {
+    flex-direction: column;
+  }
+  .cont_text {
+    width: 100%;
+  }
+  .cont_text h3 {
+    font-size: 30px;
+  }
+  .cont_text p {
+    font-size: 18px;
+    padding: 36px 0;
+  }
+  .cont_text ul li {
+    font-size: 18px;
+  }
+  .cont_text ul li i {
+    margin-right: 12px;
+  }
+  .cont_text ul li span,
+  a {
+    padding-left: 12px;
+  }
+  .cont_form {
+    width: 100%;
+  }
+  .cont_form form {
+    margin-top: 28px;
+  }
+  input[type="text"],
+  select,
+  textarea {
+    padding: 12px;
+    margin-bottom: 16px;
+  }
+  input[type="email"],
+  select,
+  textarea {
+    padding: 12px;
+    margin-bottom: 16px;
+  }
+  input[type="submit"] {
+    padding: 12px 22px;
+  }
+  /* =======================
+  Contact Part End
+========================== */
+  /* =======================
+    Footer Part Start
+========================== */
+  #footer {
+    /* padding: 80px 0 20px; */
+    padding-top: 80px;
+  }
+  .footer_text {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .logo a {
+    font-size: 36px;
+  }
+  .footer_text ul li a {
+    font-size: 22px;
+  }
+  .footer_text p {
+    font-size: 16px;
+    text-align: center;
+  }
+  /* =======================
+  Footer Part End
+========================== */
 }
 @media (min-width: 576px) and (max-width: 767.98px) {
+  /* =======================
+      Menu Part Start
+========================== */
+  .main_menu a {
+    font-size: 36px;
+  }
+  .main_menu .menu ul {
+    gap: 10px;
+    text-align: center;
+    padding-top: 10px;
+  }
+  .main_menu .navbar-toggler {
+    border: 0;
+    color: #fff;
+  }
+
+  .main_menu .navbar-toggler:focus {
+    box-shadow: none;
+  }
+
+  .main_menu .navbar-toggler {
+    border: 0;
+  }
+  /* =======================
+      Menu Part End
+========================== */
+
+  /* =======================
+      Banner Part Start
+========================== */
+  #banner {
+    padding: 60px 0;
+  }
+  .banner_text {
+    padding: 50px 0;
+  }
+  .banner_text h1 {
+    font-size: 30px;
+  }
+  #app {
+    margin-top: 10px;
+    font-size: 26px;
+  }
+  /* =======================
+      Banner Part End
+========================== */
+
+  /* =======================
+      About Part Start
+========================== */
+  #about {
+    padding-top: 60px;
+  }
+  .about_details {
+    gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .about_details img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+  }
+  .about_text {
+    text-align: center;
+  }
+  .about_text h3 {
+    font-size: 28px;
+  }
+  .about_text p {
+    font-size: 16px;
+    padding: 26px 0;
+    line-height: 26px;
+  }
+  .about_text .web {
+    gap: 5px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .about_text .web ul {
+    font-size: 16px;
+  }
+  .resume {
+    padding-top: 10px;
+  }
+  .resume a {
+    padding: 8px 16px;
+    font-size: 18px;
+  }
+  /* =======================
+    About Part End
+========================== */
+
+  /* =======================
+      Portfolio Part Start
+========================== */
+  #portfolio {
+    padding: 60px 0;
+  }
+  .port_details .port_text h2 {
+    font-size: 28px;
+  }
+  .port_details .port_text p {
+    font-size: 16px;
+    padding-top: 24px;
+    width: 100%;
+  }
+  .skills p {
+    font-size: 16px;
+    padding-bottom: 12px;
+  }
+  /* =======================
+    Portfolio Part End
+========================== */
+
+  /* =======================
+    Freelance Part Start
+========================== */
+  #freelance {
+    padding: 60px 0;
+  }
+  #free {
+    font-size: 16px;
+  }
+  .free_details a {
+    font-size: 16px;
+  }
+  /* =======================
+  Freelance Part End
+========================== */
+
+  /* =======================
+      Contact Part Start
+========================== */
+  #contact {
+    padding: 60px 0;
+  }
+  .cont_details {
+    flex-direction: column;
+  }
+  .cont_text {
+    width: 100%;
+  }
+  .cont_text h3 {
+    font-size: 28px;
+  }
+  .cont_text p {
+    font-size: 18px;
+    padding: 30px 0;
+  }
+  .cont_text ul li {
+    font-size: 16px;
+  }
+  .cont_text ul li i {
+    margin-right: 10px;
+  }
+  .cont_text ul li span,
+  a {
+    padding-left: 10px;
+  }
+  .cont_form {
+    width: 100%;
+  }
+  .cont_form form {
+    margin-top: 26px;
+  }
+  input[type="text"],
+  select,
+  textarea {
+    padding: 10px;
+    margin-bottom: 14px;
+  }
+  input[type="email"],
+  select,
+  textarea {
+    padding: 10px;
+    margin-bottom: 14px;
+  }
+  input[type="submit"] {
+    padding: 10px 20px;
+  }
+  /* =======================
+    Contact Part End
+========================== */
+
+  /* =======================
+    Footer Part Start
+========================== */
+  #footer {
+    /* padding: 60px 0 20px; */
+    padding-top: 60px;
+  }
+  .footer_text {
+    flex-direction: column;
+    gap: 14px;
+  }
+  .logo a {
+    font-size: 28px;
+  }
+  .footer_text ul li a {
+    font-size: 20px;
+  }
+  .footer_text p {
+    font-size: 14px;
+    text-align: center;
+  }
+  /* =======================
+    Footer Part End
+========================== */
 }
 @media (max-width: 575.98px) {
   /* ===========Back To Top============= */
@@ -196,7 +626,8 @@
       Footer Part Start
 ========================== */
   #footer {
-    padding: 60px 0 20px;
+    /* padding: 60px 0 20px; */
+    padding-top: 60px;
   }
   .footer_text {
     flex-direction: column;
