--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ img {
   max-width: 100%;
   vertical-align: middle;
 }
+
 .backtotop {
   padding: 10px;
   border-radius: 50%;
@@ -48,9 +49,11 @@ img {
   opacity: 0;
   transition: all linear 0.3s;
 }
+
 .backtotop:hover {
   background: #fd0054;
 }
+
 .backtotop.show {
   animation: backtop 1s;
   visibility: visible;
@@ -66,19 +69,24 @@ img {
     bottom: 10%;
   }
 }
+
 /* =======================
       Common Css End
 ========================== */
+
+/* ==========mouse Move============*/
 body.tutorial {
   --color-text: #fff;
   --color-bg: #171717;
   --color-link: #ff0000;
   background-color: smoke;
 }
+
 .credits {
   position: absolute;
   bottom: 20px;
 }
+
 .page {
   position: absolute;
   width: 100%;
@@ -87,17 +95,20 @@ body.tutorial {
   justify-content: center;
   align-items: center;
 }
+
 .page__inner {
   display: flex;
   justify-content: center;
   width: 100%;
 }
+
 .cursor {
   position: fixed;
   left: 0;
   top: 0;
   pointer-events: none;
 }
+
 .cursor--small {
   width: 8px;
   height: 8px;
@@ -107,18 +118,103 @@ body.tutorial {
   z-index: 11000;
   background: #e54b4b;
 }
+
 .cursor--canvas {
   width: 100vw;
   height: 100vh;
   z-index: 12000;
 }
+
 .page,
 .page a {
   cursor: none;
 }
-/* ==========mouse Move============*/
 
 /* ==========mouse Move============*/
+
+/* ========Page Loader========== */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #222;
+  z-index: 999;
+}
+
+#loader {
+  display: block;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  width: 150px;
+  height: 150px;
+  margin: -75px 0 0 -75px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: rgba(219, 153, 112, 0.936);
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+#loader:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: rgb(63, 186, 190);
+  -webkit-animation: spin 3s linear infinite;
+  animation: spin 3s linear infinite;
+}
+
+#loader:after {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  border-radius: 50%;
+  border: 3px solid transparent;
+  border-top-color: rgb(255, 255, 255);
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+/* ========Page Loader========== */
 
 /* =======================
       Menu Part Start
@@ -139,6 +235,7 @@ body.tutorial {
   box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
   animation: menu_fixing 0.5s;
 }
+
 @keyframes menu_fixing {
   from {
     transform: translateY(-100%);
@@ -155,24 +252,30 @@ body.tutorial {
   font-weight: 600;
   font-family: "Poppins", sans-serif;
 }
+
 .main_menu a:hover {
   color: #fff;
 }
+
 .main_menu .menu ul {
   gap: 35px;
 }
+
 .main_menu .menu ul li .active {
   color: #e54b4b;
 }
+
 .main_menu .menu ul li a {
   font-size: 18px;
   color: #fff;
   font-weight: 600;
   font-family: "Open Sans", sans-serif;
 }
+
 .main_menu .menu ul li a:hover {
   color: #e54b4b;
 }
+
 /* =======================
       Menu Part End
 ========================== */
@@ -183,15 +286,18 @@ body.tutorial {
 #banner {
   padding: 100px 0;
 }
+
 .banner_text {
   padding: 60px 0;
 }
+
 .banner_text h1 {
   font-size: 56px;
   color: #fff;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
 }
+
 /* .banner_text h2 {
   font-size: 36px;
   font-weight: 600;
@@ -224,6 +330,7 @@ body.tutorial {
     background-position: 200% center;
   }
 }
+
 .banner_text a {
   font-size: 18px;
   font-weight: 600;
@@ -236,10 +343,12 @@ body.tutorial {
   border: 1px solid #e54b4b;
   transition: all linear 0.3s;
 }
+
 .banner_text a:hover {
   background: transparent;
   color: #e54b4b;
 }
+
 /* =======================
       Banner Part End
 ========================== */
@@ -261,6 +370,7 @@ body.tutorial {
   gap: 100px;
   /* flex-wrap: wrap; */
 }
+
 .about_details img {
   width: 350px;
   height: 450px;
@@ -272,9 +382,11 @@ body.tutorial {
   font-weight: 700;
   font-family: "Poppins", sans-serif;
 }
+
 .about_text h3 span {
   color: #e54b4b;
 }
+
 .about_text p {
   font-size: 18px;
   font-weight: 400;
@@ -284,11 +396,13 @@ body.tutorial {
   padding: 32px 0;
   line-height: 30px;
 }
+
 .about_text .web {
   display: flex;
   gap: 60px;
   padding: 20px 0;
 }
+
 .about_text .web ul {
   font-size: 18px;
   font-weight: 700;
@@ -296,20 +410,25 @@ body.tutorial {
   font-style: italic;
   font-family: "Popins", sans-serif;
 }
+
 .about_text .web ul li a {
   margin-bottom: 20px;
   color: #000;
   transition: all linear 0.3s;
 }
+
 .about_text .web ul li a:hover {
   color: #e54b4b;
 }
+
 .about_text .web ul li a i {
   margin-right: 10px;
 }
+
 .resume {
   padding: 26px 0;
 }
+
 .resume a {
   padding: 16px 34px;
   background: #e54b4b;
@@ -321,10 +440,12 @@ body.tutorial {
   font-family: "Popins", sans-serif;
   transition: all linear 0.3s;
 }
+
 .resume a:hover {
   color: #e54b4b;
   background: transparent;
 }
+
 /* =======================
       About Part End
 ========================== */
@@ -335,6 +456,7 @@ body.tutorial {
 #portfolio {
   padding: 80px 0;
 }
+
 /* .port_details {
   display: flex;
   justify-content: space-between;
@@ -342,6 +464,7 @@ body.tutorial {
 .port_text {
   text-align: center;
 }
+
 .port_details .port_text h2 {
   font-size: 30px;
   font-weight: 600;
@@ -349,6 +472,7 @@ body.tutorial {
   width: 100%;
   font-family: "Popins", sans-serif;
 }
+
 .port_details .port_text p {
   font-size: 18px;
   font-weight: 400;
@@ -358,26 +482,32 @@ body.tutorial {
   width: 660px;
   margin: 0 auto;
 }
+
 .skills_details {
   display: flex;
   justify-content: space-between;
   margin-top: 46px;
 }
+
 .port_skill {
   width: 45%;
 }
+
 .skills_items {
   padding-bottom: 30px;
 }
+
 .skills p {
   font-size: 18px;
   font-weight: 600;
   font-family: "Open Sans", sans-serif;
   padding-bottom: 16px;
 }
+
 .progress .progress-bar {
   background: #e54b4b;
 }
+
 /* =======================
       Portfolio Part End
 ========================== */
@@ -389,6 +519,7 @@ body.tutorial {
   background: url(/images/freelance.png);
   padding: 80px 0;
 }
+
 .free_details {
   display: flex;
   justify-content: space-between;
@@ -420,6 +551,7 @@ body.tutorial {
     background-position: 200% center;
   }
 }
+
 .free_details a {
   font-size: 18px;
   font-weight: 700;
@@ -427,6 +559,7 @@ body.tutorial {
   font-family: "Popins", sans-serif;
   transition: all linear 0.3s;
 }
+
 .free_details a:hover {
   color: #e54b4b;
 }
@@ -440,13 +573,16 @@ body.tutorial {
 #contact {
   padding: 110px 0;
 }
+
 .cont_details {
   display: flex;
   justify-content: space-between;
 }
+
 .cont_text {
   width: 45%;
 }
+
 .cont_text h3 {
   font-size: 30px;
   font-weight: 700;
@@ -454,9 +590,11 @@ body.tutorial {
   font-family: "Popins", sans-serif;
   text-transform: capitalize;
 }
+
 .cont_text h3 span {
   color: #e54b4b;
 }
+
 .cont_text p {
   font-size: 18px;
   font-weight: 400;
@@ -464,6 +602,7 @@ body.tutorial {
   font-family: "Open Sans", sans-serif;
   padding: 36px 0;
 }
+
 .cont_text ul li {
   padding-bottom: 18px;
   font-size: 18px;
@@ -471,24 +610,30 @@ body.tutorial {
   color: #000;
   font-family: "Open Sans", sans-serif;
 }
+
 .cont_text ul li i {
   margin-right: 10px;
 }
+
 .cont_text ul li span,
 a {
   color: #767676;
   padding-left: 16px;
   transition: all linear 0.3s;
 }
+
 .cont_text ul li a:hover {
   color: #e54b4b;
 }
+
 .cont_form {
   width: 45%;
 }
+
 .cont_form form {
   margin-top: 75px;
 }
+
 input[type="text"],
 select,
 textarea {
@@ -501,6 +646,7 @@ textarea {
   margin-bottom: 16px;
   resize: vertical;
 }
+
 input[type="email"],
 select,
 textarea {
@@ -557,33 +703,40 @@ input[type="submit"]:hover {
   flex-direction: column;
   gap: 26px;
 }
+
 .logo a {
   color: #fff;
   font-size: 36px;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
 }
+
 .footer_text ul {
   display: flex;
   gap: 10px;
 }
+
 .footer_text ul li a {
   font-size: 24px;
   color: #fff;
   transition: all linear 0.3s;
 }
+
 .footer_text ul li a:hover {
   color: #e54b4b;
 }
+
 .footer_text p {
   font-size: 14px;
   font-weight: 500;
   color: #fff;
   font-family: "Poppins", sans-serif;
 }
+
 .footer_text p span {
   color: #e54b4b;
 }
+
 /* =======================
       Footer Part End
 ========================== */
