--- a/css/style.css
+++ b/css/style.css
@@ -575,11 +575,99 @@ body.tutorial {
   padding: 80px 0;
   background: #fafaee;
 }
+.service_text {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .service_text h3 {
   font-size: 30px;
   color: #000;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
+}
+.service_text a span {
+  margin-left: 10px;
+}
+.service_text a {
+  font-size: 18px;
+  color: #000;
+  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+  padding: 10px 20px;
+  transition: all linear 0.3s;
+}
+.service_text a:hover {
+  color: #e54b4b;
+}
+.project_items {
+  margin-top: 50px;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+  transition: all linear 0.3s;
+}
+.project_items:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.project_items img {
+  border-radius: 5px;
+}
+.project_text {
+  /* text-align: center; */
+}
+.project_text h4 {
+  font-size: 24px;
+  color: #000;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  padding-top: 20px;
+}
+.project_text ul {
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+  padding: 30px 0;
+}
+.project_text ul li {
+  font-size: 16px;
+  color: #fff;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  padding: 6px 10px;
+  background: #e54b4b;
+  border-radius: 20px;
+}
+.project_text h5 {
+  font-size: 18px;
+  color: #000;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+}
+.project_text p {
+  font-size: 16px;
+  color: #767676;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  padding: 20px 0;
+}
+.site {
+  display: flex;
+  justify-content: end;
+  gap: 10px;
+}
+.site a {
+  padding: 8px 18px;
+  background: #fd0054;
+  border-radius: 10px;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  transition: all linear 0.3s;
+}
+.site a:hover {
+  background: #0c090a;
 }
 /* =======================
     Service Part End
